--- a/Updated-Mods/1.0.6.md
+++ b/Updated-Mods/1.0.6.md
@@ -1,1 +1,75 @@
-placeholder<br>
+forge-1.7.10-10.13.3.1408<br>
+AOBD-2.6.2<br>
+appliedenergistics2-rv2-stable-3<br>
+Automagy-1.7.10-0.24<br>
+bdlib-1.8.0.86-mc1.7.10<br>
+BetterChests-1.7.10-1.1.1.9<br>
+BiblioCraft[v1.10.4][MC1.7.10]<br>
+BiomesOPlenty-1.7.10-2.1.0.1283<br>
+BloodMagic-1.7.10-1.3.2-1<br>
+Botania r1.6-190<br>
+buildcraft-6.4.16<br>
+Carpenter's Blocks v3.3.6 - MC 1.7.10<br>
+Chisel2-2.3.10.37<br>
+CodeChickenCore-1.7.10-1.0.6.44<br>
+CodeChickenLib-1.7.10-1.1.3.136<br>
+CoFHCore-[1.7.10]3.0.2-262<br>
+dark_menagerie-1.7.10-beta-3.0<br>
+denseores-1.6.2<br>
+ElectroMagicTools-1.7.10-2.0.0Alpha2-CUSTOM<br>
+Enchiridion 2-1.7.10-2.0.1<br>
+EnderIO-1.7.10-2.2.8.381<br>
+EnderStorage-1.7.10-1.4.7.36<br>
+EnderTech-1.7.10-0.3.2.388<br>
+enderutilities-1.7.10-0.4.0<br>
+EnderZoo-1.7.10-1.0.11.28<br>
+EvilCraft-1.7.10-0.8.6<br>
+ExtraCells-1.7.10-2.2.71b123<br>
+extrautilities-1.2.5<br>
+forestry_1.7.10-3.5.6.15<br>
+ForgeMultipart-1.7.10-1.1.2.334<br>
+funky-locomotion-1.7.10-beta-5c<br>
+gendustry-1.4.11.89-mc1.7.10<br>
+Guide-API-1.7.10-1.0.0-16<br>
+IC2NuclearControl-2.2.5a-GoingForTheKill<br>
+iChunUtil-4.2.2<br>
+industrialcraft-2-2.2.726-experimental<br>
+InfernalMobs-1.7.10-1.6.1<br>
+INpureCore-[1.7.10]1.0.0B9-62<br>
+logisticspipes-0.8.3.122<br>
+magicbees-1.7.10-2.3.1<br>
+Mekanism-1.7.10-8.1.3.231<br>
+MekanismGenerators-1.7.10-8.1.3.231<br>
+MekanismTools-1.7.10-8.1.3.231<br>
+Minechem-1.7.10-5.0.5.398<br>
+MineFactoryReloaded-[1.7.10]2.8.0-104<br>
+MrTJPCore-1.0.7.14<br>
+neiaddons-1.12.8.29-mc1.7.10<br>
+NEIIntegration-MC1.7.10-1.0.9<br>
+NotEnoughItems-1.7.10-1.0.4.107<br>
+OpenBlocks-1.7.10-1.4.3-snapshot-639<br>
+OpenModsLib-1.7.10-0.7.3-snapshot-365<br>
+OpenPeripheralAddons-1.7.10-0.3.1-snapshot-199<br>
+OpenPeripheralCore-1.7.10-1.1.1-snapshot-231<br>
+OpenPeripheralIntegration-1.7.10-0.2.2-snapshot-68<br>
+PneumaticCraft-1.7.10-1.7.0-74<br>
+practicalities-1.7.10-0.6.2<br>
+ProjectE-1.7.10-PE1.4.7<br>
+ProjectRed-1.7.10-4.6.1.80-Base<br>
+ProjectRed-1.7.10-4.6.1.80-Compat<br>
+ProjectRed-1.7.10-4.6.1.80-Integration<br>
+ProjectRed-1.7.10-4.6.1.80-Lighting<br>
+ProjectRed-1.7.10-4.6.1.80-World<br>
+Railcraft_1.7.10-9.6.1.0<br>
+RedstoneArsenal-[1.7.10]1.1.0-80<br>
+roguelike-1.7.10-1.3.6.3<br>
+SpecialMobs-1.7.10-3.1.1<br>
+StevesFactoryManagerA93<br>
+TConstruct-1.7.10-1.8.5<br>
+thaumicenergistics-0.8.10.5<br>
+ThaumicTinkerer-2.5-1.7.10-502<br>
+ThermalExpansion-[1.7.10]4.0.1-182<br>
+ThermalFoundation-[1.7.10]1.0.0-81<br>
+TiCTooltips-mc1.7.10-1.2.4<br>
+twilightforest-1.7.10-2.3.7<br>
+witchery-1.7.10-0.24.1
