--- a/Updated-Mods/1.0.6.md
+++ b/Updated-Mods/1.0.6.md
@@ -45,6 +45,7 @@ MekanismGenerators-1.7.10-8.1.3.231<br>
 MekanismTools-1.7.10-8.1.3.231<br>
 Minechem-1.7.10-5.0.5.398<br>
 MineFactoryReloaded-[1.7.10]2.8.0-104<br>
+Morpheus-1.7.10-1.6.4<br>
 MrTJPCore-1.0.7.14<br>
 neiaddons-1.12.8.29-mc1.7.10<br>
 NEIIntegration-MC1.7.10-1.0.9<br>
